force-app/main/default/objects/Contract_Margin__c/Contract_Margin__c.object-meta.xml
<CustomObject>
    <label>Contract Margin</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Contract Margin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Margins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>