force-app/main/default/objects/Contract_Margin__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Margins (Account)</relationshipLabel>
    <relationshipName>Contract_Margins</relationshipName>
    <type>Lookup</type>
</CustomField>