force-app/main/default/objects/Contract_Margin__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Margins</relationshipLabel>
    <relationshipName>Contract_Margins1</relationshipName>
    <type>Lookup</type>
</CustomField>