force-app/main/default/objects/Contract_Margin__c/fields/Consultant_Unit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Unit_Margin__c</fullName>
    <label>Consultant Unit Margin</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>