force-app/main/default/objects/Contract_Margin__c/fields/Contract_Renewal_Batch_Detail__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Batch_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Renewal Batch Detail</label>
    <referenceTo>Contract_Renewal_Batch_Detail__c</referenceTo>
    <relationshipLabel>Contract Margins</relationshipLabel>
    <relationshipName>Contract_Margins</relationshipName>
    <type>Lookup</type>
</CustomField>