force-app/main/default/objects/Contract_Margin__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <summarizedField>Premise_Margin__c.Margin__c</summarizedField>
    <summaryForeignKey>Premise_Margin__c.Contract_Margin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>