force-app/main/default/objects/Contract_Margin__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <summarizedField>Premise_Margin__c.Volume__c</summarizedField>
    <summaryForeignKey>Premise_Margin__c.Contract_Margin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>